<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_about_us_24dp"
            android:title="@string/about_us" />

        <item
            android:id="@+id/help_and_support"
            android:icon="@drawable/ic_help_support_24dp"
            android:title="@string/help_and_support" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_help_support_24dp"
            android:title="@string/logout" />


    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_share" />

        </menu>
    </item>

</menu>
