<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="720dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!--Search Bar -->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

<!--                <TextView-->
<!--                    android:id="@+id/app_name"-->
<!--                    android:layout_centerHorizontal="true"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:text="ChefGuru"-->
<!--                    android:textColor="#221F1F"-->
<!--                    android:textSize="24sp" />-->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/app_name"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:elevation="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="#ffffff">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_text"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"/>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_search_black_24dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:layout_alignParentRight="true"
                        />

                </RelativeLayout>
            </RelativeLayout>

            <!--Recycler View-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"

                android:background="#FFFFFF">

                <LinearLayout
                    android:id="@+id/feature_diet"
                    android:layout_width="130dp"
                    android:layout_height="290dp"
                    android:layout_margin="10dp"
                    android:background="#DFE3EE"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/chef"
                        android:textAllCaps="true"
                        android:textColor=" #292F33"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/detailchef" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fetured_recylerview"
                    android:layout_width="208dp"
                    android:layout_height="300dp"
                    android:layout_marginLeft="4dp"
                    android:layout_toRightOf="@+id/feature_diet"
                    android:background="#DFE3EE">

                </androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>

            <!--New Topic Addition Sections-->

            <!--DIET FOOD-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#292F33"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/viewall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/viewall"/>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="10dp"
                    android:id="@+id/dietfood_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    >

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <!-- Breakfast food -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Breakfast"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#292F33"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/viewall2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/viewall"/>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="10dp"
                    android:id="@+id/breakfast_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <!--Lunch food-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lunch"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#292F33"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/viewall3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/viewall"/>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lunch_recycler"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <!--Dinner food-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dinner"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#292F33"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/viewall4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/viewall"/>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dinner_recycler"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <!--Fresh Smoothies-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/smoothy"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#292F33"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/viewall5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/viewall"/>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/smoothy_recycler"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>



            <!--Kids Favourite-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kids"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#292F33"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/viewall6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/viewall"/>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/kids_recycler"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <!--Various Salaads-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salads"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#292F33"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/viewall7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/viewall"/>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/salaad_recycler"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>